# advent-of-code

./: readme.org
2021/: Makefile
2021/days/: AbstractDay.cpp  AbstractDay.h  day1.cpp  day1.h  day2.cpp  day2.h  day3.cpp  day3.h  day4.cpp  day4.h  day5.cpp  day5.h  day6.cpp  day6.h  day7.cpp  day7.h  main.cpp
2022/: .gitignore  Cargo.toml  README.org
2022/src/: day1.rs  day2.rs  day3.rs  day3_second.rs  day4.rs
